Inserindo sugestões na pagina de usuário

--- a/public/user.html
+++ b/public/user.html
@@ -101,21 +101,66 @@
                 <h3 class="subtitle-devs">Se você já sabe um pouco de programação confira algumas dicas e sugestões</h3>
                 <div class="tips-devs">
                     <img class="icon-devs" src="./images/Programming-pana (3).svg" alt="Imgem Programador">
-                    <div class="paragraphs">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae velit vel aliquid eaque
-                            nam dolore harum quisquam, architecto, illum esse deserunt ab nisi perferendis, pariatur
-                            nesciunt repellendus accusantium quod sunt. ipsum dolor sit amet consectetur adipisicing
-                            elit. Ea
-                            consequatur eligendi voluptate ad provident odio iste! Amet nam fugiat dignissimos laborum
-                            dicta alias! Necessitatibus, eius repudiandae?</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae velit vel aliquid eaque
-                            nam dolore harum quisquam, architecto, illum esse deserunt ab nisi perferendis, pariatur
-                            nesciunt repellendus accusantium quod sunt. ipsum dolor sit amet consectetur adipisicing
-                            elit. Eaque quod dolores voluptates sit
-                            nihil quam architecto assumenda laborum tempora magnam, enim, est quis itaque, ratione
-                            temporibus quaerat eligendi molestiae saepe</p>
+                    <div class="tips">
+                        <h4>Dicas para um bom programador</h4>
+                        <ul>
+
+                            <li>1)Nunca pare de estudar: como a programação é uma das áreas que envolve a tecnologia,
+                                que se altera ou evolui constantemente, é preciso estar por dentro de tudo.
+                            </li>
+                            <li>2)Sempre coloque seu código no Github: GitHub é um sistema de gerenciamento de projetos
+                                e
+                                versões de códigos assim como uma plataforma de rede social criado para desenvolvedores.
+                                Mas para que o GitHub é utilizado? Entre outras coisas, ele permite que você trabalhe em
+                                projetos colaborativos com desenvolvedores de todo o mundo, planeje seus projetos e
+                                acompanhe o trabalho. Então, mesmo que você sejá iniciante, colocar o seu codiogo no
+                                GitHub ajúda a você interagir mais com a comunidade de programadores.
+                            </li>
+                            <li>
+                                3)Programar significa escrever código: Quando se esta estudando programação é necessario
+                                escrever o codigo mesmo, não só ler livros, artigos, etc. Não é que eles não ajudam,
+                                porem, ficar apenas estudando por meio deles não vai te fazer evoluir. Quando se esta
+                                estudando escrevendo linhas de codigos você pode ver se o que estudou surtiu efeito e se
+                                acontecer algum erro você vai saber aprender com ele.
+                            </li>
+                        </ul>
                     </div>
                 </div>
+            </div>
+            <div class="sugestions">
+                <h2 class="title-sugestions">
+                    Confira algumas estenções do Visual Studio Code
+                </h2>
+                <h4 class="subtitle-sugestions">Se você utiliza o escritor de codigo fonte Visual Studio Code confira
+                    algumas estenções que te
+                    auxiliarão no desenvolvimento web</h4>
+                <ul class="list-sugestions">
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.auto-rename-tag">Auto
+                            rename tag</a>: Quando queremos trocar um nome de uma tag temos que alterar em
+                        dois lugares, mas, com essa extenção só precisamos alterar em um lugar só.</li>
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=formulahendry.code-runner">Code
+                            Runner</a>: Executa snippets de código ou o arquivo de código para varias
+                        linguagens.
+                    </li>
+                    <li><a href="https://marketplace.visualstudio.com/items?itemName=pranaygp.vscode-css-peek">CSS
+                            Peek</a>: Utilizando um atalho segurando a tecla ctrl com o mouse em cima de uma
+                        classe é
+                        possivel visualizar rapidamento como está sendo estilizado um elemento.</li>
+                    <li><a
+                            href="https://marketplace.visualstudio.com/search?target=VSCode&category=Themes&sortBy=Installs">Themes</a>:
+                        Existem muitos temas para o VS Code, basta escolher um, instalar e
+                        pronto. Eu
+                        utilizo o <a
+                            href="https://marketplace.visualstudio.com/items?itemName=blackblackcat.dracula-pure">Dracula
+                            Pure</a>.</li>
+                    <li><a
+                            href="https://marketplace.visualstudio.com/search?target=VSCode&category=Themes&sortBy=Installs">Icons</a>:
+                        Os icones no VS Code, além de estiliza-lo, te ajuda a identificar mais
+                        rapido que
+                        tipo de arquivo ou o tipo de conteudo de uma pasta esta em certo local. Eu utilizo o <a
+                            href="https://marketplace.visualstudio.com/items?itemName=PKief.material-icon-theme">Material
+                            Icon Theme</a>.</li>
+                </ul>
             </div>
         </div>
         <div class="contact">
