Alterando animações na pagina de usuário e login

--- a/public/user.html
+++ b/public/user.html
@@ -42,7 +42,7 @@
                             Se você está iniciando no mundo da programação provavelmente vai começar a entender apenas
                             algumas linhas de codigo. Sendo assim, recomendo começar a entender uma linguagem que não
                             precise instalar muitos softwares para não confundir muito, então o javascript é uma opção.
-                            Ele não precisa ser instalado pois os principais programadores rodam em javacript.
+                            Ele não precisa ser instalado pois os principais navegadores rodam em javacript.
                             Você pode
                             escrever em um bloco de notas mesmo uma pagina html e css em conjunto com javascript
                             começado a entender algumas logicas e calculos.
@@ -50,16 +50,18 @@
                         </p>
                         <p>
                             <br>
-                            É importante resaltar que html e css não são
+                            É importante resaltar que HTML e CSS não são
                             linguagens de programação. HTML é uma linguagem de marcação de texto que apenas encapsula
-                            dados e descreve o que fazer com eles, não como fazer e CSS é uma linguagem de estilização.
+                            dados e descreve o que fazer com eles, não como fazer e CSS é apenas uma linguagem de
+                            estilização.
                             Já o javascript sim é uma linguagem de programação pois ele é capaz de fazer cálculos, mudar
                             informações contidas em algum tipo de memória, tomar decisões e mudar o fluxo de execução.
                             Porém, a programação não fica presa só ao desenvolvimento web. Então não recomendo estudar
                             apenas sobre html, javascript e até css pois você pode gostar ainda mais de programar com
                             outras
                             linguagens desenvolvendo outras aplicações como softwares para computadores ou a aplicativos
-                            em mobile.
+                            em mobile. Mas, se quiser aprender um pouco mais de desenvolvimento web, de uma olhada no
+                            tópico abaixo.
                         </p>
 
                     </div>
@@ -99,7 +101,7 @@
         <div class="conteiner-devs">
             <div class="devs">
                 <h3 class="subtitle-devs">Se você já sabe um pouco de programação confira algumas dicas e sugestões</h3>
-                <div class="tips-devs">
+                <div class="tips-devs" id="tips_devs">
                     <img class="icon-devs" src="./images/Programming-pana (3).svg" alt="Imgem Programador">
                     <div class="tips">
                         <h4>Dicas para um bom programador</h4>
@@ -127,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div class="sugestions">
+            <div class="sugestions" id="div_sugestions">
                 <h2 class="title-sugestions">
                     Confira algumas estenções do Visual Studio Code
                 </h2>
