--- a/public/login.html
+++ b/public/login.html
@@ -19,9 +19,9 @@
             <form id="form_login" method="post" onsubmit="return entrar()">
                 <h2 class="title">Login</h2>
                 <label for="login">Email</label>
-                <input type="text" name="login">
+                <input type="email" required minlength="4" name="login">
                 <label for="senha">Senha</label>
-                <input type="password" name="senha">
+                <input type="password" required minlength="4" name="senha">
                 <br>
                 <button id="btn_entrar" class="submit">Entrar</button>
             </form>
